# vf-qmllibs

./: CMakeLists.txt  README.md  VfQmlLibsConfig.cmake.in
libs/: CMakeLists.txt
libs/advancednetworkmanger/: CMakeLists.txt  anmlib.qrc
libs/advancednetworkmanger/lib/: CMakeLists.txt  advancednetworkmanager.cpp  anmlib.qrc  networkmanagerabstraction.cpp
libs/advancednetworkmanger/src/: advancednetworkmanager.cpp  advancednetworkmanager.h  networkmanagerabstraction.cpp  networkmanagerabstraction.h
libs/advancednetworkmanger/tests/: CMakeLists.txt  test_deduce_subnetmask_ipv4.cpp  test_deduce_subnetmask_ipv4.h
libs/charts-bar-qwt/src/: fftbarchart.cpp  fftbarchart.h  hpwbarchart.cpp  hpwbarchart.h  qwtcharts.cpp  qwtcharts.h
libs/charts-line-qt/lib/: CMakeLists.txt  chartitemqml.cpp  chartitemqml.h  chartitemqmlregister.cpp  chartitemqmlregister.h
libs/datetime-setter/: CMakeLists.txt  notes
libs/datetime-setter/lib/: CMakeLists.txt  abstracttimedate1connection.h  timedate1connection.cpp  timedate1connection.h  timedatefacade.cpp  timedatefacade.h  timezonebasemodel.cpp  timezonebasemodel.h  timezoneextractor.cpp  timezoneextractor.h  timezonemodelbase.cpp  timezonemodelbase.h  timezonemodelcityfiltered.cpp  timezonemodelcityfiltered.h  timezonemodelfiltered.cpp  timezonemodelfiltered.h  timezonemodelregion.cpp  timezonemodelregion.h  timezonemodelsfacade.cpp  timezonemodelsfacade.h  timezoneregionmodel.cpp  timezoneregionmodel.h  timezonestatecontroller.cpp  timezonestatecontroller.h
libs/datetime-setter/lib-qml/: CMakeLists.txt  timedateqmlwrapper.cpp  timedateqmlwrapper.h
libs/datetime-setter/testlib/: CMakeLists.txt  testtimedate1connection.cpp  testtimedate1connection.h  testtimedate1storage.cpp  testtimedate1storage.h
libs/datetime-setter/tests/: CMakeLists.txt  test_tasks_datetime.cpp  test_tasks_datetime.h  test_time_date_facade.cpp  test_time_date_facade.h  test_time_date_helper.cpp  test_time_date_helper.h  test_timedate1_connection.cpp  test_timedate1_connection.h  test_timedate1_mock.cpp  test_timedate1_mock.h  test_timezone_base_model.cpp  test_timezone_base_model.h  test_timezone_extractor.cpp  test_timezone_extractor.h  test_timezone_model_base.cpp  test_timezone_model_base.h  test_timezone_model_city_filtered.cpp  test_timezone_model_city_filtered.h  test_timezone_model_filtered.cpp  test_timezone_model_filtered.h  test_timezone_model_region.cpp  test_timezone_model_region.h  test_timezone_region_model.cpp  test_timezone_region_model.h  test_timezone_state_controller.cpp  test_timezone_state_controller.h
libs/datetime-setter/timedate1/: CMakeLists.txt  timedate1.readme  timedate1.xml  timedate1connection.cpp  timedate1connection.h
libs/datetime-setter/timezone-translations/: CMakeLists.txt
libs/notificationmanager/: CMakeLists.txt  notificationmanager.qrc
libs/notificationmanager/lib/: CMakeLists.txt  globalusernotificationsingleton.cpp  globalusernotificationsingleton.h  notificationmessage.cpp  notificationmessage.h  notificationmsg.cpp  notificationmsg.h  notificationmsgexpiring.cpp  notificationmsgexpiring.h
libs/notificationmanager/qml-component/: CMakeLists.txt  notificationmanager.cpp  notificationmanager.h  notificationmanager.qrc
libs/notificationmanager/qml-singleton/: CMakeLists.txt  globalusernotificationsingleton.cpp  globalusernotificationsingleton.h  notificationmanager.cpp  notificationmanager.h
libs/notificationmanager/src/: globalusernotificationsingleton.h
libs/notificationmanager/tests/: CMakeLists.txt  test_notificationmessage.cpp  test_notificationmessage.h  test_notificationmsg.cpp  test_notificationmsg.h  test_notificationmsgcontainer.cpp
libs/painter-tools/lib/: CMakeLists.txt  fuzzypaintdevice.h  fuzzypaintengine.h
libs/pixmap-item/lib/: CMakeLists.txt  zpixmapitem.cpp  zpixmapitem.h  zsvgitem.cpp  zsvgitem.h
libs/uivectorgraphics/: CMakeLists.txt
libs/uivectorgraphics/lib/: CMakeLists.txt  phasordiagram.h  uivectorgraphics.cpp  uivectorgraphics.h  vectorpainter.cpp  vectorpainter.h  vectortosvgpainter.cpp  vectortosvgpainter.h
libs/uivectorgraphics/src/: uivectorgraphics.cpp  uivectorgraphics.h
libs/uivectorgraphics/tests/: CMakeLists.txt  test_vector_diagram_gui.cpp  test_vector_diagram_gui.h
libs/uivectorgraphics_lib/: CMakeLists.txt
libs/vectordiagram/lib/: CMakeLists.txt  abstractvectorpainter.h  phasordiagram.cpp  phasordiagram.h  vectorconstants.h  vectorpaintcalc.cpp  vectorpaintcalc.h  vectorpaintcontroller.cpp  vectorpaintcontroller.h  vectorpainter.cpp  vectorpainter.h  vectorprimitivespainter.cpp  vectorprimitivespainter.h  vectorsettings.cpp  vectorsettings.h  vectorsettingslengths.h  vectorsettingsstatic.cpp  vectorsettingsstatic.h  vectortosvgpainter.cpp  vectortosvgpainter.h
libs/vectordiagram/testlib/: CMakeLists.txt  testprimitivepainterlabel.cpp  testprimitivepainterlabel.h  testprimitivepainterstar.cpp  testprimitivepainterstar.h  testprimitivepaintertriangle.cpp  testprimitivepaintertriangle.h  testprimitivevectorpainter.cpp  (+3 more)
libs/zeraFa/: CMakeLists.txt  zerafa.cpp  zerafa.h  zerafa.qrc
libs/zeraHelpers/: CMakeLists.txt  helpersplugin.cpp  helpersplugin.h  qmlhelpers.qrc
libs/zeraQwtChart/: CMakeLists.txt
libs/zeracomponents/: CMakeLists.txt  zeracomponents.qrc
libs/zeracomponents_lib/: CMakeLists.txt
libs/zvkeyboard/: CMakeLists.txt  zvkeyboard.cpp  zvkeyboard.qrc  zvkeyboardlayout.cpp  zvkeyboardlayout.h
modules/advancednetworkmanger_lib/: CMakeLists.txt
playground/: CMakeLists.txt  main.cpp
playground/qml/: Anmsettings.qml  ChartItemTest.qml  CheckBoxTest.qml  ComboBoxTest.qml  Main.qml  NotifManager.qml  NotifiManager.qml  NotificationManager.qml  RadioButtonTest.qml  SacVuTest.qml  SacVuTestViewSigned.qml  SacVuTestViewUnsigned.qml  SimpleAndCheapVuTest.qml  TimeDateSetter.qml  Uivectorgraph.qml  ZvKeyboard.qml  ZvKeyboardTest.qml  app.qrc  notifiManager.qml  uivectorgraph.qml
veinlibs/: CMakeLists.txt  zeraveincomponents.qrc
veinlibs/src/: zeraveincomponents.cpp  zeraveincomponents.h
veinlibs/zeraVeinComponents/: CMakeLists.txt
(+290 files in other folders)
