add_subdirectory(advancednetworkmanger)
add_subdirectory(charts-bar-qwt)
add_subdirectory(charts-line-qt)
add_subdirectory(datetime-setter)
add_subdirectory(notificationmanager)
add_subdirectory(painter-tools)
add_subdirectory(vectordiagram)
add_subdirectory(zeracomponents)
add_subdirectory(zeraFa)
add_subdirectory(zeraHelpers)
add_subdirectory(zvkeyboard)

